<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TolimaTips</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnmapa">Mapa     </string>
    <string name="btnlis">Lista</string>
    <string name="btnmlis">Listar Mis Tips</string>
    <string name="btntips">Crear Tip</string>
    <string name="butBuscar">Buscar</string>
    <string name="strMunicipio">Municipio</string>
    <string name="strCategoria">Categoria</string>
    <string name="strPalabraClave">Palabra Clave</string>
    <string name="title_activity_tip">TipActivity</string>
    <string name="strTitulo"> Titulo</string>
    <string name="strTip">Tip (max 120 caracteres)</string>
    <string name="strURL">URL (YouTube)</string>
    <string name="strButNewTip">Crear Nuevo Tip</string>
    <string name="strpuntuacion">Puntuacion</string>
    <string name="strmunicipio">Municipio</string>
    <string name="strcategoria">Categoria</string>

</resources>
